--- a/CursoAngular11/src/app/components/ng-model/ng-model.component.html
+++ b/CursoAngular11/src/app/components/ng-model/ng-model.component.html
@@ -1,1 +1,5 @@
-<p>ng-model works!</p>
+<h2>ngModel</h2>
+<!-- importar formsModule y ngModel se convierte en value modificable por el defecto -->
+<input type="text" [(ngModel)]="campoTextoVariable">
+<p>{{campoTextoVariable}}</p>
+
