--- a/CursoAngular11/src/app/app.component.html
+++ b/CursoAngular11/src/app/app.component.html
@@ -4,6 +4,8 @@
 <app-property-binding></app-property-binding>
 <app-event-binding></app-event-binding>
 <app-ng-model></app-ng-model>
+<app-ciclo-vida textoInput = "el texto desde el padre"></app-ciclo-vida>
+<app-directivas></app-directivas>
 <h2>app calc</h2>
 <app-calc></app-calc>
 <!-- <router-outlet></router-outlet> -->
