--- a/CursoAngular11/src/app/components/event-binding/event-binding.component.html
+++ b/CursoAngular11/src/app/components/event-binding/event-binding.component.html
@@ -17,5 +17,7 @@
 
 <!-- eventos  -->
 
-<input (mouseenter)="onMouseenter($event)" (mouseout)="onMouseout($event)" (input)="onInput($event)"> 
+<input  (mouseenter)="onMouseenter($event)" (mouseout)="onMouseout($event)" (input)="onInput($event)"> 
 <p >{{valueInput}}</p>
+
+<!-- (input)= funtion   cambios al intante-->
