--- a/CursoAngular11/src/app/app.component.html
+++ b/CursoAngular11/src/app/app.component.html
@@ -19,6 +19,7 @@
         <li><button (click)="onclick('about')">Sobre MI</button></li>
         <li><button  (click)="onclick('contact')">Contacto</button></li>
         <li><button  (click)="onclick('info')">Info</button></li>
+        <li><button (click)="onclick('info/55/detalles')">Info hijo 33 detalle</button ></li>
     </ul>
 </div>
 
@@ -29,3 +30,7 @@
 <br>
 <button (click)="createData()">agregar</button>
 <button (click)="dataFalse()">Traer el false</button>
+<app-formularios></app-formularios>
+
+
+<!-- para instalar bootstrap, instalar por npm y en el angular.json en la linea 27 styles, poner ruta "node_modules/bootstrap/dist/css/bootstrap.min.css" (antes de de la linea css)-->
