--- a/CursoAngular11/src/app/app.component.html
+++ b/CursoAngular11/src/app/app.component.html
@@ -19,7 +19,7 @@
         <li><button (click)="onclick('about')">Sobre MI</button></li>
         <li><button  (click)="onclick('contact')">Contacto</button></li>
         <li><button  (click)="onclick('info')">Info</button></li>
-        <li><button (click)="onclick('info/55/detalles')">Info hijo 33 detalle</button ></li>
+        <li><button (click)="onclick('info/')">Info hijo {{numero}} detalle</button ></li>
     </ul>
 </div>
 
