--- a/CursoAngular11/src/app/app.component.html
+++ b/CursoAngular11/src/app/app.component.html
@@ -31,6 +31,7 @@
 <button (click)="createData()">agregar</button>
 <button (click)="dataFalse()">Traer el false</button>
 <app-formularios></app-formularios>
+<app-httpclient></app-httpclient>
 
 
 <!-- para instalar bootstrap, instalar por npm y en el angular.json en la linea 27 styles, poner ruta "node_modules/bootstrap/dist/css/bootstrap.min.css" (antes de de la linea css)-->
