--- a/CursoAngular11/src/app/app.component.html
+++ b/CursoAngular11/src/app/app.component.html
@@ -32,6 +32,10 @@
 <button (click)="dataFalse()">Traer el false</button>
 <app-formularios></app-formularios>
 <app-httpclient></app-httpclient>
+<app-pipes></app-pipes>
+<app-animaciones></app-animaciones>
+<app-mapanativ></app-mapanativ>
+<app-mapalib></app-mapalib>
 
 
 <!-- para instalar bootstrap, instalar por npm y en el angular.json en la linea 27 styles, poner ruta "node_modules/bootstrap/dist/css/bootstrap.min.css" (antes de de la linea css)-->
